@@ -92,14 +92,6 @@
 </chapter>
 -->
 
-<chapter id="dist.install" xreflabel="Install">
-  <title>INSTALL</title>
-  <literallayout>
-    <xi:include href="../../INSTALL" parse="text"  
-        xmlns:xi="http://www.w3.org/2001/XInclude" />
-  </literallayout>
-</chapter>
-
 <chapter id="dist.license-gpl" xreflabel=" The GNU General Public License">
   <title>The GNU General Public License</title>
     <literallayout>
